# Chromosome

./: .gitignore  DBSE v5.0 «Chromosome».txt  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
cases/: README.md
cases/parse/: membrane_parse.jsonl
cases/physics/: apple_weight.jsonl
dbse/: __init__.py  pipeline.py
dbse/api/: __init__.py  app.py  mapper.py  schemas.py  visualizations.py
dbse/contracts/: __init__.py  affine.py  ast.py  context.py  dimensions.py  domain.py  proof.py
dbse/cytoplasm/: __init__.py  errors.py  indicators.py  plugin.py  registry.py
dbse/dimensional/: __init__.py  checks.py  errors.py  parser.py  units.py
dbse/expression/: __init__.py  errors.py  fallback.py  schema.py  validator.py  whitelist.py
dbse/knowledge/: __init__.py  core.py  errors.py  guard.py  hypothesis.py
dbse/lattice/: __init__.py  catalog.py  classify.py  entropy.py  models.py
dbse/layers/: __init__.py  affine_types.py  base.py  cytoplasm.py  dimensional.py  expression.py  membrane.py  model_lattice.py  narrative.py  nucleus.py  ribosome.py  sts_typing.py
dbse/membrane/: __init__.py  adapter.py  errors.py  schema.py
dbse/mentor/: __init__.py  cases.py  cli.py  run.py  verdict.py
dbse/narrative/: __init__.py  build.py  models.py  render.py  templates.py
dbse/nucleus/: __init__.py  budget.py  constants.py  errors.py  invariants.py  monitor.py  steps.py  (+6 more)
docs/: IMPLEMENTATION_STATUS.md  TESTING_AND_MENTOR.md  spec-notes.md
golden/: README.md
tests/: test_contracts.py  test_e2e_dod.py  test_pipeline_skeleton.py
verdicts/: .gitkeep
(+108 files in other folders)
