[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbse"
version = "0.0.0"
description = "DBSE v5.0 «Chromosome» — deterministic bio-semantic engine (reality compiler)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Chromosome Team" }]
dependencies = [
    "pydantic>=2,<3",
    "sympy>=1.12",
    "scipy>=1.11",
    "z3-solver>=4.12",
    "fastapi>=0.115",
]

[project.scripts]
dbse-api = "dbse.api.app:main"
dbse-mentor = "dbse.mentor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.6",
    "mypy>=1.11",
    "scipy>=1.11",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["dbse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["dbse", "tests"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["sympy.*", "scipy.*", "z3.*", "fastapi.*", "uvicorn.*", "httpx.*"]
ignore_missing_imports = true
